--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
 
 body {
   font-family: "Roboto", sans-serif;
+  color: #2E2F42
 }
 
 /* --- HEADER --- */
@@ -57,6 +58,22 @@ body {
 
 .header-list {
   list-style: none;
+}
+
+.header-link:hover {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: calc(24 / 16);
+  letter-spacing: 0.02em;
+  color: #4d5ae5;
+}
+
+.header-link:focus {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: calc(24 / 16);
+  letter-spacing: 0.02em;
+  color: #4d5ae5;
 }
 
 .header-link {
@@ -107,6 +124,7 @@ body {
   margin: 0 auto;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  cursor: pointer;
 }
 
 /* --- BENEFITS --- */
@@ -126,7 +144,6 @@ body {
 }
 
 .benefits-decription {
-  font-weight: 400;
   font-size: 16px;
   line-height: calc(24 / 16);
   letter-spacing: 0.02em;
@@ -152,6 +169,12 @@ body {
   list-style: none;
 }
 
+.work-image {
+    margin-left: auto;
+    margin-right: auto;
+    display: block ;
+}
+
 /* --- TEAM ---- */
 
 .team {
@@ -172,6 +195,12 @@ body {
   list-style: none;
 }
 
+.team-avatar {
+    margin-left: auto;
+    margin-right: auto;
+    display: block ;
+}
+
 .team-member {
   font-weight: 600;
   font-size: 20px;
@@ -185,7 +214,6 @@ body {
 }
 
 .team-job {
-  font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   text-align: center;
@@ -209,6 +237,7 @@ body {
   text-align: center;
   letter-spacing: 0.04em;
   color: #4d5ae5;
+  cursor: pointer;
 }
 
 .products-button:hover {
@@ -247,18 +276,23 @@ body {
   list-style: none;
 }
 
+.gallery-image {
+    margin-left: auto;
+    margin-right: auto;
+    display: block ;
+}
+
 .gallery-title {
   font-weight: 600;
   font-size: 20px;
-  line-height: 24px;
+  line-height: calc(24 / 0);
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
 
 .gallery-product {
-  font-weight: 400;
   font-size: 16px;
-  line-height: 24px;
+  line-height: calc(24 / 16);
   letter-spacing: 0.02em;
   color: #434455;
 }
@@ -287,20 +321,19 @@ footer {
 }
 
 .footer-logo > span {
-font-family: 'Raleway';
-font-style: normal;
-font-weight: 800;
-font-size: 18px;
-line-height: calc(21 / 18);
-display: flex;
-align-items: center;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: #4D5AE5;
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: calc(21 / 18);
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
 }
 
 .footer-abstract {
-  font-weight: 400;
   font-size: 16px;
   line-height: calc(24 / 16);
   letter-spacing: 0.02em;
