--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 /* color accent: #4D5AE5 */
 
 :root {
-  --color-primary-text: #2E2F42;
+  --color-primary-text: #2e2f42;
   --color-secondary-text: #434455;
   --color-white: #ffffff;
   --color-accent: #4d5ae5;
